# histnd

./: .gitignore  Cargo.toml  README.md  requirements.txt  setup.py
examples/: hist3d.py  simple_benchmark.py
histnd/: __init__.py  wrapper.py
src/: hist.rs  lib.rs  search.rs
tests/: main.rs  test.ipynb
