[package]
name = "histnd"
version = "0.1.3-dev"
authors = ["Zhang Zongyu <zongyu@novazy.net>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A python module that computes multi-dimensional histogram."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "histnd"
crate-type = ["lib", "cdylib"]

[dependencies]
pyo3 = { version = "0.13", features = ["extension-module"] }
numpy = "0.13"
ndarray = { version = "0.14", features = ["rayon"] }
